--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lib/*"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --build tsconfig.build.json",
     "clean": "rm -rf ./lib/",
     "cm": "cz",
     "lint": "eslint ./src --fix",
