--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
   },
   "homepage": "https://github.com/Rubilmax/ethers-maths#readme",
   "dependencies": {
-    "ethers": "^5.0.0"
+    "@ethersproject/bignumber": "^5.7.0",
+    "@ethersproject/units": "^5.7.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
@@ -63,9 +64,7 @@
     "ts-jest": "^27.0.5",
     "typescript": "^4.7.4"
   },
-  "peerDependencies": {
-    "ethers": "^5.7.0"
-  },
+  "peerDependencies": {},
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
