--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
   },
   "homepage": "https://github.com/Rubilmax/ethers-maths#readme",
   "dependencies": {
-    "@ethersproject/bignumber": "^5.0.0",
-    "@ethersproject/units": "^5.0.0"
+    "ethers": "^5.0.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
@@ -65,8 +64,7 @@
     "typescript": "^4.7.4"
   },
   "peerDependencies": {
-    "@ethersproject/bignumber": "^5.0.0",
-    "@ethersproject/units": "^5.0.0"
+    "ethers": "^5.0.0"
   },
   "config": {
     "commitizen": {
