--- a/package.json
+++ b/package.json
@@ -42,9 +42,10 @@
   },
   "homepage": "https://github.com/Rubilmax/ethers-maths#readme",
   "dependencies": {
-    "ethers": "^5.0.0"
+    "ethers": "^6.0.5"
   },
   "devDependencies": {
+    "@jest/globals": "^29.4.3",
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
     "@types/jest": "^27.5.2",
     "@typescript-eslint/eslint-plugin": "^5.34.0",
@@ -57,14 +58,14 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
-    "jest": "^27.2.0",
+    "jest": "^29.4.3",
     "lint-staged": "^10.5.4",
     "prettier": "^2.7.1",
-    "ts-jest": "^27.0.5",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.7.4"
   },
   "peerDependencies": {
-    "ethers": "^5.0.0"
+    "ethers": "^6.0.0"
   },
   "config": {
     "commitizen": {
@@ -132,11 +133,14 @@
       "<rootDir>/src/**/*.ts",
       "!<rootDir>/src/types/**/*.ts"
     ],
-    "globals": {
-      "ts-jest": {
-        "diagnostics": false,
-        "isolatedModules": true
-      }
+    "transform": {
+      "\\.tsx?$": [
+        "ts-jest",
+        {
+          "diagnostics": false,
+          "isolatedModules": true
+        }
+      ]
     }
   }
 }
