--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "incremental": true,
-    "target": "es6",
+    "target": "esnext",
     "module": "commonjs",
     "declaration": true,
     "outDir": "lib",
