ci(test): remove nodejs 14 with ethers v6

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,9 @@ on:
         required: true
   workflow_run:
     workflows: ["Jest Test Suite"]
-    branches: [main]
+    branches:
+      - main
+      - ethers-v5
     types:
       - completed
 
