ci(ethers): add multiple release ci

--- a/package.json
+++ b/package.json
@@ -79,7 +79,9 @@
   },
   "release": {
     "branches": [
-      "main"
+      "main",
+      "ethers-v5",
+      "ethers-v6"
     ],
     "plugins": [
       [
