--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,18 +1,16 @@
 name: Jest Test Suite
 
 on:
-  push:
-    branches:
-      - main
   pull_request:
     paths:
       - src/**
       - test/**
       - package.json
       - yarn.lock
+  workflow_call:
 
 jobs:
-  build:
+  jest:
     runs-on: ubuntu-latest
 
     strategy:
@@ -20,15 +18,17 @@ jobs:
         node-version: [14.x, 16.x, 18.x]
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Setup Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
+          cache: yarn
 
       - name: Install dependencies
-        run: yarn
+        run: yarn --frozen-lockfile
 
       - name: Run Jest test suite
         run: yarn test
