--- a/package.json
+++ b/package.json
@@ -45,23 +45,23 @@
     "ethers": "^5.0.0"
   },
   "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^3.3.0",
+    "@trivago/prettier-plugin-sort-imports": "4.0.0",
     "@types/jest": "^27.5.2",
-    "@typescript-eslint/eslint-plugin": "^5.34.0",
-    "@typescript-eslint/parser": "^5.34.0",
-    "commitizen": "^4.2.5",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
+    "commitizen": "^4.3.0",
     "conventional-changelog-conventionalcommits": "^5.0.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.22.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.1",
-    "jest": "^27.2.0",
+    "husky": "^8.0.3",
+    "jest": "^29.4.3",
     "lint-staged": "^10.5.4",
-    "prettier": "^2.7.1",
-    "ts-jest": "^27.0.5",
-    "typescript": "^4.7.4"
+    "prettier": "^2.8.4",
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.9.5"
   },
   "peerDependencies": {
     "ethers": "^5.0.0"
