build(ethers-v5): remove dedicated ethers-v5 branch and replace by main

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   jest:
     runs-on: ubuntu-latest
-    if: github.head_ref != 'ethers-v5' && github.head_ref != 'ethers-v6' # already triggered by push
+    if: github.head_ref != 'ethers-v6' # already triggered by push
 
     strategy:
       matrix:
