--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "build": "tsc --build tsconfig.build.json",
     "clean": "rm -rf ./lib/",
     "cm": "cz",
-    "lint": "eslint ./src --fix",
     "prepare": "husky install",
     "test:watch": "jest --watch",
     "test": "jest --coverage",
@@ -47,20 +46,14 @@
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "4.0.0",
     "@types/jest": "^27.5.2",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
     "commitizen": "^4.3.0",
     "conventional-changelog-conventionalcommits": "^5.0.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.39.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
-    "jest": "^29.5.0",
+    "jest": "^29.6.1",
     "lint-staged": "^10.5.4",
     "prettier": "^2.8.8",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "^29.1.1",
     "typescript": "^4.9.5"
   },
   "peerDependencies": {
@@ -75,7 +68,7 @@
     "access": "public"
   },
   "lint-staged": {
-    "*.ts": "eslint --cache --cache-location .eslintcache --fix"
+    "*.ts": "prettier"
   },
   "release": {
     "branches": [
@@ -132,12 +125,6 @@
     "collectCoverageFrom": [
       "<rootDir>/src/**/*.ts",
       "!<rootDir>/src/types/**/*.ts"
-    ],
-    "globals": {
-      "ts-jest": {
-        "diagnostics": false,
-        "isolatedModules": true
-      }
-    }
+    ]
   }
 }
