--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "build": "tsc --build tsconfig.build.json",
     "clean": "rm -rf ./lib/",
     "cm": "cz",
-    "lint": "eslint ./src --fix",
     "prepare": "husky install",
     "test:watch": "jest --watch",
     "test": "jest --coverage",
@@ -42,27 +41,21 @@
   },
   "homepage": "https://github.com/Rubilmax/ethers-maths#readme",
   "dependencies": {
-    "ethers": "^6.0.5"
+    "ethers": "^6.0.0"
   },
   "devDependencies": {
-    "@jest/globals": "^29.4.3",
-    "@trivago/prettier-plugin-sort-imports": "4.0.0",
-    "@types/jest": "^27.5.2",
-    "@typescript-eslint/eslint-plugin": "^5.53.0",
-    "@typescript-eslint/parser": "^5.53.0",
+    "@jest/globals": "^29.6.1",
+    "@trivago/prettier-plugin-sort-imports": "4.1.1",
+    "@types/jest": "^29.5.3",
     "commitizen": "^4.3.0",
     "conventional-changelog-conventionalcommits": "^5.0.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.34.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
-    "jest": "^29.4.3",
-    "lint-staged": "^10.5.4",
-    "prettier": "^2.8.4",
-    "ts-jest": "^29.0.5",
-    "typescript": "^4.9.5"
+    "jest": "^29.6.1",
+    "lint-staged": "^13.2.3",
+    "prettier": "^3.0.0",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.1.6"
   },
   "peerDependencies": {
     "ethers": "^6.0.0"
@@ -76,7 +69,7 @@
     "access": "public"
   },
   "lint-staged": {
-    "*.ts": "eslint --cache --cache-location .eslintcache --fix"
+    "*.ts": "prettier"
   },
   "release": {
     "branches": [
