feat(deps): remove ethers dependency
remove dependency on ethers for formatting

BREAKING CHANGE: API

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -7,10 +7,10 @@ on:
 
 jobs:
   test:
-    uses: rubilmax/ethers-maths/.github/workflows/test.yml@main
+    uses: rubilmax/evm-maths/.github/workflows/test.yml@main
 
   release:
     needs: test
 
-    uses: rubilmax/ethers-maths/.github/workflows/release.yml@main
+    uses: rubilmax/evm-maths/.github/workflows/release.yml@main
     secrets: inherit
