--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ethers-maths",
-  "version": "5.0.0",
-  "description": "➗ Useful ethers-based math libraries to ease the journey through off-chain fixed-point arithmetics",
+  "name": "evm-maths",
+  "version": "1.0.0",
+  "description": "➗ Useful bigint math libraries to ease the journey through off-chain fixed-point arithmetics",
   "main": "lib/index.js",
   "files": [
     "lib/*"
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Rubilmax/ethers-maths.git"
+    "url": "git+https://github.com/Rubilmax/evm-maths.git"
   },
   "license": "MIT",
   "author": {
@@ -30,6 +30,8 @@
   },
   "keywords": [
     "ethers",
+    "bigint",
+    "bignumber",
     "multicall",
     "rpc",
     "call",
@@ -37,28 +39,22 @@
     "smart contract"
   ],
   "bugs": {
-    "url": "https://github.com/Rubilmax/ethers-maths/issues"
+    "url": "https://github.com/Rubilmax/evm-maths/issues"
   },
-  "homepage": "https://github.com/Rubilmax/ethers-maths#readme",
-  "dependencies": {
-    "ethers": "^6.0.0"
-  },
+  "homepage": "https://github.com/Rubilmax/evm-maths#readme",
   "devDependencies": {
     "@jest/globals": "^29.7.0",
     "@trivago/prettier-plugin-sort-imports": "4.1.1",
-    "@types/jest": "^29.5.5",
+    "@types/jest": "^29.5.10",
     "commitizen": "^4.3.0",
     "conventional-changelog-conventionalcommits": "^5.0.0",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "lint-staged": "^14.0.1",
-    "prettier": "^3.0.3",
+    "prettier": "^3.1.0",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.2.2"
-  },
-  "peerDependencies": {
-    "ethers": "^6.0.0"
+    "typescript": "^5.3.2"
   },
   "config": {
     "commitizen": {
